hero triangles z-index fix

--- a/src/scss/sections/hero/_hero.scss
+++ b/src/scss/sections/hero/_hero.scss
@@ -26,7 +26,7 @@ $hero__height--desktop: 100vh;
 	&::after {
 		position: absolute;
 		bottom: 0;
-		z-index: 2;
+		z-index: 10;
 		width: 50%;
 		height: 0;
 		border-bottom: $hero__triangle--height solid $color__fourth;
